--- a/Sp1.css
+++ b/Sp1.css
@@ -1,14 +1,14 @@
 
 @font-face {
     font-family: 'TitleFont';
-    src: url('../fonts/cursyger.ttf') format('truetype');
+    src: url('/fonts/cursyger.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'SecondFont';
-    src: url('../fonts/Stepalange.otf') format('opentype');
+    src: url('/fonts/Stepalange.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
@@ -65,8 +65,7 @@ p {
 }
 
 .image-gallery img {
-    max-width: 500px;
-    max-height: 500px;
+    max-width: 300px;
     border-radius: 7px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     object-fit: cover;
