--- a/projects.css
+++ b/projects.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: 'TitleFont';
-    src: url('/fonts/cursyger.ttf') format('truetype');
+    src: url('../fonts/cursyger.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'SecondFont';
-    src: url('/fonts/Stepalange.otf') format('opentype');
+    src: url('../fonts/Stepalange.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
