--- a/Pp.css
+++ b/Pp.css
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'SecondFont';
-    src: url('../fonts/Stepalange.otf') format('opentype');
+    src: url('../fonts/stepalange.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
